--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gulp-minify-css": "^0.3.8",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^0.7.3",
-    "gulp-changed": "^1.0.0"
+    "gulp-changed": "^1.0.0",
+    "del": "^0.1.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
