remove incorrect redundancy

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "inline-images": "css-b64-images _normalize.scss > _normalize-inlined.scss.tmp",
     "clean": "rm _normalize-inlined.scss.tmp",
     "install": "npm run build",
-    "watch": "nodemon -e scss -w ./*.scss -x 'npm run build'",
+    "watch": "nodemon -e scss -w . -x 'npm run build'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
