--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "_normalize.scss",
-  "version": "1.3.0",
-  "description": "Sass version of Normalize.css, customized with some more defaults",
+  "name": "darcmattr-normalize-scss",
+  "version": "2.2.0",
+  "description": "Sass version of normalize.css, with typographic vertical rhythm",
+  "style": "normalize.css",
   "files": [
     "_normalize.scss",
+    "normalize.css",
+    "normalize.css.map",
     "README.md",
     "LICENSE.md",
-    "package.json",
     "assets/",
     "test.html"
   ],
   "devDependencies": {
-    "clean-css": "3.4.9",
-    "css-b64-images": "0.2.5",
-    "node-sass": "3.4.2",
-    "nodemon": "1.8.1"
+    "css-b64-images": "^0.2.5",
+    "node-sass": "^3.4.2",
+    "nodemon": "^1.8.1"
   },
   "scripts": {
     "build": "npm run inline-images && node-sass --output-style=compressed --source-map=true _normalize-inlined.scss.tmp normalize.css && npm run clean",
@@ -38,6 +39,6 @@
   "bugs": {
     "url": "https://github.com/DArcMattr/_normalize.scss/issues"
   },
-  "homepage": "https://github.com/DArcMattr/_normalize.scss",
+  "homepage": "http://darcmattr.github.io/_normalize.scss/",
   "dependencies": {}
 }
